# TV

./: .gitignore  Dockerfile  Makefile  README.md  my_examples
01_uvod/: CMakeLists.txt  classes.cpp  exceptions.cpp  hello.cpp  memory.cpp  stl.cpp  strings.cpp  templates.cpp
02_opencv/: CMakeLists.txt  camera.cpp  datatypes.cpp  drawing.cpp  files.cpp  serialization.cpp  task.cpp  utilities.cpp
03_barvniProstori/: CMakeLists.txt  colorful_rings.cpp  edges.cpp  filtering.cpp  histograms.cpp  hough.cpp  morphology.cpp  my_threshold.cpp  threshold.cpp
03_barvniProstori/63130273_task2/: README
04_geometry/: CMakeLists.txt  calibration.cpp  features.cpp  features.h  homography.cpp  keypoints.cpp  matching.cpp  pose.cpp  rectify.cpp
04_geometry/task/: CMakeLists.txt  README  my_hom.cpp
05_learning/: CMakeLists.txt  bow.cpp  detector.cpp  face.cpp  faces.cpp  utilities.cpp  utilities.h
06_video/: CMakeLists.txt  background.cpp  ball.hpp  bouncy_ball.cpp  flow.cpp  kalman.cpp  models.cpp  models.h  trackers.cpp  trackers.h  tracking.cpp
Project/: CMakeLists.txt  README.md  color_extractor.cpp  color_extractor.h  detector.conf  detector.cpp  gesture_tracker.cpp  gesture_tracker.h  hand_tracker.cpp  hand_tracker.h  head_bob.cpp  key_press.sh  report.txt
Project/sample_videos/: running1.webm
Project/src/: CMakeLists.txt  detector.cpp  gesture_tracker.h  hand_tracker.cpp  test_hand_tracker.cpp
Projekt_oddaja/: README.md  detector.conf  key_press.sh
Projekt_oddaja/src/: color_extractor.cpp  color_extractor.h
Reports/: Project_intro.tex  porocilo.tex  report.tex  slovene.ldf
