PROJECT(cpp)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

ADD_EXECUTABLE(hello hello.cpp)
ADD_EXECUTABLE(strings strings.cpp)
ADD_EXECUTABLE(memory memory.cpp)
ADD_EXECUTABLE(classes classes.cpp)
ADD_EXECUTABLE(templates templates.cpp)
ADD_EXECUTABLE(stl stl.cpp)
ADD_EXECUTABLE(exceptions exceptions.cpp)

