PROJECT(cpp)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

FIND_PACKAGE(OpenCV REQUIRED)
LINK_LIBRARIES(${OpenCV_LIBS})
INCLUDE_DIRECTORIES(AFTER ${CMAKE_CURRENT_BINARY_DIR} ${OpenCV_INCLUDE_DIR})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")

ADD_EXECUTABLE(background background.cpp)
ADD_EXECUTABLE(flow flow.cpp)
ADD_EXECUTABLE(tracking tracking.cpp trackers.cpp)
ADD_EXECUTABLE(kalman kalman.cpp models.cpp)
ADD_EXECUTABLE(bouncy_ball bouncy_ball.cpp ball.hpp)
